rank table final update(i wish)

--- a/node_server/public/rank.html
+++ b/node_server/public/rank.html
@@ -34,16 +34,16 @@
         border-right-width: 60px;
         border-top-width: 13px;
       }
-      /* 
+
       body {
-        opacity: 0.3;
-      } */
+        overflow: auto;
+      }
 
       .table-container {
         display: flex;
         justify-content: space-around;
         margin: 27px;
-        border: 100px;
+        border: 10px;
       }
     </style>
   </head>
