--- a/node_server/public/index.html
+++ b/node_server/public/index.html
@@ -31,15 +31,22 @@
     }
     #rankDialog.open {
       inset: 0;
+      z-index: 1;
+      top: 187px;
       width: 100%;
-      height: 100%;
+      bottom: 0;
+      height: calc(100% - 187px);
+      background-color: #939378;
     }
     #rankIFrame {
       width: 100%;
       height: 100%;
     }
     #close-btn {
-      z-index: 1 !important;
+      top: 1.5%;
+      left: 2%;
+      border-style: hidden;
+      background-color: #939378;
     }
   </style>
   <body>
@@ -61,11 +68,12 @@
       }
     </script>
     <script type="module" src="/js/index_model.js"></script>
-    <h1>
+    <h1 id="banner">
       <p id="index_h1">珍音功</p>
       <p id="index_h1">Pretty Pitied Bitch</p>
+      <p id="index_h1">Game mode</p>
     </h1>
-    <h1>Game mode</h1>
+
     <div class="btn-row">
       <a href="/main.html"
         ><button class="btn btn-outline-light">1 Minute</button></a
@@ -80,19 +88,19 @@
         ><button class="btn btn-outline-light">Practice</button></a
       >
     </div>
-    <h1>
+    <div style="display: flex; justify-content: center">
       <button class="btn btn-outline-light" onclick="showRank()">Rank</button>
-      <dialog id="rankDialog">
-        <button id="close-btn" onclick="hideRank()">close</button>
-        <br />
-        <iframe style="border: 0" id="rankIFrame"></iframe>
-      </dialog>
-    </h1>
+    </div>
     <h1>
       <a href="about.html"
         ><button class="btn btn-outline-light">About</button></a
       >
     </h1>
+    <dialog id="rankDialog">
+      <button id="close-btn" onclick="hideRank()">back</button>
+      <br />
+      <iframe style="border: 0" id="rankIFrame"></iframe>
+    </dialog>
 
     <script>
       function hideRank() {
@@ -104,6 +112,9 @@
         // }, 500);
       }
       function showRank() {
+        let height = getComputedStyle(banner).height;
+        rankDialog.style.top = height;
+        rankDialog.style.height = `calc(100% - ${height})`;
         rankDialog.open = true;
         setTimeout(() => {
           rankDialog.classList.add("open");
