--- a/node_server/public/p5_js.html
+++ b/node_server/public/p5_js.html
@@ -395,6 +395,7 @@
             stopMic();
 
             osc.freq(randomFreq, 0.1, 0.2);
+            osc.amp(1);
             osc.start();
 
         }
