matched() merged successfully !

--- a/node_server/public/main.html
+++ b/node_server/public/main.html
@@ -62,6 +62,9 @@
   <button id="startButton">Start Microphone</button>
 
 
+  <script>
+    let isMatch = false
+  </script>
   <!-- <button onclick="countdownTimer()">start</button> -->
   <script src="/js/timer.js"></script>
   <!-- <script type="module" src="../cube/normal-cube.js"></script> -->
