--- a/node_server/public/index.html
+++ b/node_server/public/index.html
@@ -1,127 +1,124 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
-      crossorigin="anonymous"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Alumni+Sans+Pinstripe&family=Bungee+Spice&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="style.css" />
-    <title>Main</title>
-  </head>
-  <style>
-    #rankDialog {
-      position: fixed;
-      inset: 50%;
-      width: 1px;
-      height: 1px;
-      transition: all 0.5s;
-      overflow: hidden;
-      padding: 0;
-    }
-    #rankDialog.open {
-      inset: 0;
-      z-index: 1;
-      top: 187px;
-      width: 100%;
-      bottom: 0;
-      height: calc(100% - 187px);
-      background-color: #939378;
-    }
-    #rankIFrame {
-      width: 100%;
-      height: 100%;
-    }
-    #close-btn {
-      top: 1.5%;
-      left: 2%;
-      border-style: hidden;
-      background-color: #939378;
-    }
-  </style>
-  <body>
-    <div id="measureSize"></div>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      async
-      src="https://unpkg.com/es-module-shims@1.8.0/dist/es-module-shims.js"
-    ></script>
-    <script type="importmap">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Alumni+Sans+Pinstripe&family=Bungee+Spice&display=swap"
+    rel="stylesheet" />
+  <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Black+Ops+One&family=Cormorant:wght@300&display=swap"
+    rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200&family=Righteous&display=swap" rel="stylesheet">
+  <title>Main</title>
+</head>
+<style>
+  #rankDialog {
+    position: fixed;
+    inset: 50%;
+    width: 1px;
+    height: 1px;
+    transition: all 0.5s;
+    overflow: hidden;
+    padding: 0;
+  }
+
+  #rankDialog.open {
+    inset: 0;
+    z-index: 1;
+    top: 187px;
+    width: 100%;
+    bottom: 0;
+    height: calc(100% - 187px);
+    background-color: #939378;
+  }
+
+  #rankIFrame {
+    width: 100%;
+    height: 100%;
+  }
+
+  #close-btn {
+    top: 1.5%;
+    left: 2%;
+    border-style: hidden;
+    background-color: #939378;
+  }
+
+  button {
+    font-family: "Righteous", cursive;
+  }
+</style>
+
+<body>
+  <div id="measureSize"></div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+    crossorigin="anonymous"></script>
+  <script async src="https://unpkg.com/es-module-shims@1.8.0/dist/es-module-shims.js"></script>
+  <script type="importmap">
       {
         "imports": {
           "three": "https://unpkg.com/three@0.147.0/build/three.module.js"
         }
       }
     </script>
-    <script type="module" src="/js/index_model.js"></script>
-    <h1 id="banner">
-      <p id="index_h1">珍音功</p>
-      <p id="index_h1">Pretty Pitied Bitch</p>
-      <p id="index_h1">Game mode</p>
-    </h1>
+  <script type="module" src="/js/index_model.js"></script>
+  <h1 id="banner">
+    <p id="index_h1">珍音功</p>
+    <p id="index_h1">Pretty Pitied Pitch</p>
+    <p id="index_h1">Game mode</p>
+  </h1>
 
-    <div class="btn-row">
-      <a href="/main.html"
-        ><button class="btn btn-outline-light">1 Minute</button></a
-      >
-      <a href="/main.html"
-        ><button class="btn btn-outline-light">5 Cups</button></a
-      >
-      <a href="/main.html"
-        ><button class="btn btn-outline-light">Challenge</button></a
-      >
-      <a href="/main.html"
-        ><button class="btn btn-outline-light">Practice</button></a
-      >
-    </div>
-    <div style="display: flex; justify-content: center">
-      <button class="btn btn-outline-light" onclick="showRank()">Rank</button>
-    </div>
-    <h1>
-      <a href="about.html"
-        ><button class="btn btn-outline-light">About</button></a
-      >
-    </h1>
-    <dialog id="rankDialog">
-      <button id="close-btn" onclick="hideRank()">back</button>
-      <br />
-      <iframe style="border: 0" id="rankIFrame"></iframe>
-    </dialog>
+  <div class="btn-row">
+    <a href="/main.html"><button class="btn btn-outline-light">1 Minute</button></a>
+    <a href="/main.html"><button class="btn btn-outline-light">5 Cups</button></a>
+    <a href="/main.html"><button class="btn btn-outline-light">Challenge</button></a>
+    <a href="/main.html"><button class="btn btn-outline-light">Practice</button></a>
+  </div>
+  <div style="display: flex; justify-content: center">
+    <button class="btn btn-outline-light" onclick="showRank()">Rank</button>
+  </div>
+  <h1>
+    <a href="about.html"><button class="btn btn-outline-light">About</button></a>
+  </h1>
+  <dialog id="rankDialog">
+    <button id="close-btn" onclick="hideRank()">back</button>
+    <br />
+    <iframe style="border: 0" id="rankIFrame"></iframe>
+  </dialog>
 
-    <script>
-      function hideRank() {
-        console.log("hidden rank");
-        rankDialog.classList.remove("open");
-        rankDialog.open = false;
-        // setTimeout(() => {
-        //   rankDialog.open = false;
-        // }, 500);
-      }
-      function showRank() {
-        let height = getComputedStyle(banner).height;
-        rankDialog.style.top = height;
-        rankDialog.style.height = `calc(100% - ${height})`;
-        rankDialog.open = true;
-        setTimeout(() => {
-          rankDialog.classList.add("open");
-        });
-        rankIFrame.src = "/rank-demo.html";
-        rankIFrame.src = "/rank.html";
-      }
-    </script>
-  </body>
+  <script>
+    function hideRank() {
+      console.log("hidden rank");
+      rankDialog.classList.remove("open");
+      rankDialog.open = false;
+      // setTimeout(() => {
+      //   rankDialog.open = false;
+      // }, 500);
+    }
+    function showRank() {
+      let height = getComputedStyle(banner).height;
+      rankDialog.style.top = height;
+      rankDialog.style.height = `calc(100% - ${height})`;
+      rankDialog.open = true;
+      setTimeout(() => {
+        rankDialog.classList.add("open");
+      });
+      rankIFrame.src = "/rank-demo.html";
+      rankIFrame.src = "/rank.html";
+    }
+  </script>
+</body>
+
 </html>
