--- a/node_server/public/main.html
+++ b/node_server/public/main.html
@@ -32,7 +32,7 @@
   <button class="btn btn-outline-light" id="play">play</button>
   <button class="btn btn-outline-light" id="create">create</button>
 
-  <div id="error">?</div>
+  <!-- <div id="error">?</div> -->
   <div class="d-flex">
     <div id="timer">01:00:00</div>
     <div id="cup-counter">0 Cup</div>
