speaker icon replacing the canvas, disable "select"

--- a/node_server/public/index.html
+++ b/node_server/public/index.html
@@ -76,7 +76,7 @@
   <script type="module" src="/js/index_model.js"></script>
   <h1 id="banner">
     <p id="index_h1">珍音功</p>
-    <p id="index_h1">Pretty Pitied itch</p>
+    <p id="index_h1">Pretty Pitied Pitch</p>
     <p id="index_h1">Game mode</p>
   </h1>
 
