--- a/node_server/public/main.html
+++ b/node_server/public/main.html
@@ -21,7 +21,20 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200&family=Righteous&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 </head>
+
+<style>
+  * {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: moz-none;
+    -ms-user-select: none;
+    -o-user-select: none;
+    user-select: none;
+  }
+</style>
 
 <body>
   <a href="../index.html"><button class="btn btn-outline-light" style="float: right">
@@ -46,7 +59,9 @@
   </div>
 
   <div id="restart" onclick="restart()"> Restart</div>
-
+  <div class="d-flex">
+    <i class="bi bi-volume-up-fill"></i>
+  </div>
 
   <div class="d-flex">
     <div class="canvas-container"></div>
